# elf-magic

./: .gitignore  .gitmodules  .ignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  ecosystem-release.yml  release.yml
docs/: architecture.md  ecosystem.md  usage.md
docs/bugs/: 2025-01-15_clippy-build-script-failure.md
docs/modes/: laser-eyes.md  magic.md  permissive.md
ecosystem/solana-associated-token-account/: Cargo.toml
ecosystem/solana-associated-token-account/src/: lib.rs
ecosystem/solana-associated-token-account/tests/: integration.rs
ecosystem/solana-memo/: Cargo.toml
ecosystem/solana-memo/src/: lib.rs
ecosystem/solana-memo/tests/: integration.rs
ecosystem/solana-spl-token/: Cargo.toml  build.rs
ecosystem/solana-spl-token/src/: lib.rs
ecosystem/solana-spl-token/tests/: integration.rs
ecosystem/solana-stake/: Cargo.toml  build.rs
ecosystem/solana-stake/src/: lib.rs
ecosystem/solana-stake/tests/: integration.rs
ecosystem/solana-token-2022/: Cargo.toml
ecosystem/solana-token-2022/src/: lib.rs
ecosystem/solana-token-2022/tests/: integration.rs
scripts/: ecosystem-prepare.sh  release  release-ecosystem-package  sync-ecosystem-package  update-ecosystem-package  update-submodule
scripts/ci/: create-github-release  install-solana  parse-tag
src/: builder.rs  codegen.rs  config.rs  domain.rs  error.rs  io.rs  lib.rs  programs.rs  workspace.rs
src/io/: mod.rs
tests/: e2e_tests.rs  laser_eyes_mode_integration.rs  magic_mode_integration.rs  permissive_mode_integration.rs
tests/common/: mod.rs
