[package]
name = "elf-magic"
version = "0.1.0"
edition = "2021"
description = "Automatic compile-time ELF exports for Solana programs. One-liner integration, zero config, just works. ✨"
license = "MIT"
repository = "https://github.com/levicook/elf-magic"
homepage = "https://github.com/levicook/elf-magic"
documentation = "https://github.com/levicook/elf-magic"
readme = "README.md"
keywords = ["workspace-automation", "cargo", "elf", "build-tool", "solana"]
authors = ["Levi Cook <levicook@gmail.com>"]
license-file = "LICENSE"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
glob = "0.3"
toml = "0.8"
minijinja = "2.10.2"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"
temp-env = { version = "0.3", optional = true }
cargo_metadata = "0.20"

[features]
testing = ["dep:temp-env"]

[dev-dependencies]
