[package]
name = "elf-magic-solana-associated-token-account"
version = "7.0.0"
edition = "2021"
description = "Pre-built ELF exports for Solana Associated Token Account program"
license = "MIT"
repository = "https://github.com/levicook/elf-magic"
keywords = ["elf-magic", "solana", "associated-token-account-program"]

[package.metadata.elf-magic]
mode = "laser-eyes"
workspaces = [
    { manifest_path = "./upstream/Cargo.toml", only = [
        "path:*/program/*",
    ] },
]

[package.metadata.upstream]
repository = "https://github.com/solana-program/associated-token-account"

[build-dependencies]
elf-magic = { version = "0.5" }
