[package]
name = "elf-magic-solana-memo"
version = "6.0.0"
edition = "2021"
description = "Pre-built ELF exports for Solana Memo Program"
license = "MIT"
keywords = ["elf-magic", "solana", "memo-program"]

[package.metadata.elf-magic]
mode = "laser-eyes"
workspaces = [
    { manifest_path = "./upstream/Cargo.toml", only = [
        "target:spl_memo",
        "target:p_memo",
    ] },
]

[package.metadata.upstream]
repository = "https://github.com/solana-program/memo"

[build-dependencies]
elf-magic = { version = "0.5" }
