[package]
name = "elf-magic-solana-spl-token"
version = "3.4.0"
edition = "2021"
description = "Pre-built ELF exports for Solana SPL Token program"
license = "MIT"
repository = "https://github.com/levicook/elf-magic"
keywords = ["elf-magic", "solana", "spl-token-program"]

[package.metadata.elf-magic]
mode = "laser-eyes"
workspaces = [
    { manifest_path = "./upstream/Cargo.toml", only = [
        "path:*/program/*",
        "path:*/p-token/*",
    ] },
]

[package.metadata.elf-magic.constants]
"./upstream/program/Cargo.toml" = "SPL_TOKEN_PROGRAM_ELF"
"./upstream/p-token/Cargo.toml" = "SPL_TOKEN_P_TOKEN_ELF"

[package.metadata.upstream]
repository = "https://github.com/solana-program/token"

[build-dependencies]
elf-magic = { version = "0.5" }
